htaccess y nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,7 @@ location ~* \.(js|jpg|jpeg|gif|png|webp|css|tgz|gz|rar|bz2|doc|pdf|ppt|tar|wav|b
 }
 add_header Access-Control-Allow-Origin "facebook.com";
 add_header Access-Control-Allow-Origin "http://localhost:3000";
+add_header Access-Control-Allow-Origin "*";
 
 # location / {
 #     etag off;
