--- a/.htaccess
+++ b/.htaccess
@@ -17,16 +17,18 @@
 # http://code.google.com/p/html5security/wiki/CrossOriginRequestSecurity
 # http://enable-cors.org/
 
- <IfModule mod_headers.c>
-    Header set Access-Control-Allow-Origin "*"
- </IfModule>
+ #<IfModule mod_headers.c>
+ #   Header set Access-Control-Allow-Origin "*"
+ #</IfModule>
 
-#<IfModule mod_headers.c>
-#    Header set Access-Control-Allow-Origin "https://dominio.com"
-#    Header set Access-Control-Allow-Credentials true
-#    Header add Access-Control-Allow-Headers "accept, origin, x-requested-with, x-request, content-type"
-#    Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS, XMODIFY"
-#</IfModule>
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "idalibre.com"
+    Header set Access-Control-Allow-Origin "*.idalibre.com"
+    Header set Access-Control-Allow-Origin "localhost"
+    Header set Access-Control-Allow-Credentials true
+    Header add Access-Control-Allow-Headers "accept, origin, x-requested-with, x-request, content-type"
+    Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS, XMODIFY"
+</IfModule>
 
 # ------------------------------------------------------------------------------
 # | CORS-enabled images                                                        |
