--- a/.htaccess
+++ b/.htaccess
@@ -24,7 +24,8 @@
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "idalibre.com"
     Header set Access-Control-Allow-Origin "*.idalibre.com"
-    Header set Access-Control-Allow-Origin "localhost"
+    Header set Access-Control-Allow-Origin "idalibre.com:444"
+    Header set Access-Control-Allow-Origin "*.idalibre.com:444"
     Header set Access-Control-Allow-Credentials true
     Header add Access-Control-Allow-Headers "accept, origin, x-requested-with, x-request, content-type"
     Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS, XMODIFY"
