--- a/nginx.conf
+++ b/nginx.conf
@@ -5,9 +5,10 @@ location ~* \.(js|jpg|jpeg|gif|png|webp|css|tgz|gz|rar|bz2|doc|pdf|ppt|tar|wav|b
     add_header Cache-Control "max-age=31536000, public";
 }
 add_header Access-Control-Allow-Origin "facebook.com";
-add_header Access-Control-Allow-Origin "localhost";
 add_header Access-Control-Allow-Origin "idalibre.com";
 add_header Access-Control-Allow-Origin "*.idalibre.com";
+add_header Access-Control-Allow-Origin "idalibre.com:444";
+add_header Access-Control-Allow-Origin "*.idalibre.com:444";
 
 # location / {
 #     etag off;
